<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--
		================================================================ UI
		Elements
		================================================================
	-->

	<!-- Main Activity -->

	<string name="app_name">men\u00E9ame</string>
	<string name="hello">Welcome to menéame!</string>

	<!-- Tab Pages -->

	<string name="main_tab_news">News</string>
	<string name="main_tab_queue">Queue</string>
	<string name="main_tab_comments">Comments</string>

	<!-- UI Lsts -->

	<string name="empty_list">List is empty... Touch to refresh</string>
	<string name="meneo_item_open">Detailed view</string>
	<string name="meneo_item_open_meneame">Open (menéame)</string>
	<string name="meneo_item_open_source">Open (source)</string>
	<string name="meneo_item_vote">Vote</string>
	<string name="meneo_item_share">Share</string>

	<!-- Menu -->

	<string name="main_menu_refresh">Refresh</string>
	<string name="main_menu_notame">Nótame</string>
	<string name="main_menu_settings">Settings</string>
	<string name="main_menu_about">About</string>

	<!-- Button Callouts -->
	<string name="generic_send">Send</string>
	<string name="generic_back">Back</string>
	<string name="generic_ok">Ok</string>
	<string name="generic_yes">Yes</string>
	<string name="generic_no">No</string>

	<!-- Share feed item option -->
	<string name="share_option_title">Share Story</string>
	<string name="share_option_subject">Men\u00E9ame for Android: SUBJECT</string>

	<!-- Messages and Info -->
	<string name="refreshing_lable">Refreshing...</string>
	<string name="refreshing_lable_cached">Refreshing from cache...</string>
	<string name="context_menu_open">Opening meneame.net</string>
	<string name="context_menu_open_source">Opening source</string>
	<string name="advice_not_implemented">Ooops.. Not yet implemented!</string>
	<string name="confirm_clear_cache">Clear cached feeds?</string>
	<string name="clear_cache_successfull">Cache has been deleted!</string>
	<string name="notame_setup_data">You need to setup your Username and API Key before
		using Nótame.\nWould you like to configure it now?</string>
	<string name="notame_setup_data_tilte">Nótame configuration</string>
	<string name="menealo_setup_data">You need to setup your UserID and API Key before
		voting an article.\nWould you like to configure it now?</string>
	<string name="menealo_setup_data_tilte">Menealo configuration</string>
	<string name="menealo_send">Vote has been send!</string>
	<string name="crash_report_question">The app detected a crash! Do you want to send the
		log file to the developer?</string>
	<string name="themes_not_available_sdk_version">Themes are only available for devices with Android 1.6 or higher!</string>

	<!-- Version changeset -->
	<string name="version_title">Version NUMBER (LABLE)</string>
	<string name="version_change_title">Version Changes</string>
	
	<string name="version_change_v14_title">Version 14 (0.3.1)</string>
	<string name="version_change_v14">- TODO</string>	
	
	<string name="version_change_v13_title">Version 13 (0.3.0)</string>
	<string name="version_change_v13">- Android 2.1 hotfix</string>	
	
	<string name="version_change_v12_title">Version 12 (0.2.6)</string>
	<string name="version_change_v12">- Minor fixes for version 0.2.5.\nADVICE: Once you detect a crash please send us the current device log. This can be achieved with any \'Log Collector\' app found in the market.</string>
	
	<string name="version_change_v11_title">Version 11 (0.2.5)</string>
	<string name="version_change_v11">- Fixed force close for Android versions 1.5 and 1.6.</string>
	
	<string name="version_change_v10_title">Version 10 (0.2.4)</string>
	<string name="version_change_v10">- Styles revised.\n- A new theme has been added, just have a look into the preferences.\n- Added option to choose which action should be performed when a user touches an article. By default the source will be opened in the browser.\n- Minor fixes.</string>
	
	<string name="version_change_v9_title">Version 9 (0.2.3)</string>
	<string name="version_change_v9">- First version of the \'send story\' system! The system is just a first step, once we got authentication running it will be seamless!</string>
	
	<string name="version_change_v8_title">Version 8 (0.2.2)</string>
	<string name="version_change_v8">- Share option from within an article (long
		click)\n- Detailed view for articles (long click option)\n- Menéame logo acts as a back button.\n- Added option to invert the
		list, so that the first item will be located at the bottom of the
		list\n- Added new data to articles: \'User\' and \'Date\'\n- General stabilization of the app.</string>
	
	<string name="version_change_v7_title">Version 7 (0.2.1)</string>
	<string name="version_change_v7">- Compatible with Android 1.5 (CupCake)\n- Fixed
		\'Refresh on launch\' orientation bug</string>
		
	<string name="version_change_v6_title">Version 6 (0.2.0)</string>
	<string name="version_change_v6">- General speed-up! No lagging anymore!\n- Caché is
		now pure DB based to speed-up the app.\n- Beta-Voting system
		added!\nStill no 1.5 (Cupcake) support, but I\'m on it!</string>
		
	<string name="version_change_v5_title">Version 5 (0.1.5)</string>
	<string name="version_change_v5">- Minor bug fixes</string>
	
	<string name="version_change_v4_title">Version 4 (0.1.4)</string>
	<string name="version_change_v4">- Added DB caching and general speed-up\n-
		Stability fixes\n- First crash reporting functionality tests</string>
		
	<string name="version_change_v3_title">Version 3 (0.1.3)</string>
	<string name="version_change_v3">- SD-Card cache implemented\n- Added Nótame page to
		add notes to Nótame</string>
		
	<string name="version_change_v2_title">Version 2 (0.1.2)</string>
	<string name="version_change_v2">- Fixing some memory issues\n- Releasing list
		content when switching pages, needs a cache process to be seamless
	</string>
	
	<string name="version_change_v1_title">Version 1 (0.1.1)</string>
	<string name="version_change_v1">- First beta release</string>

	<!-- About info -->
	<string name="about_title">menéame for Android</string>
	<string name="about_title_faq">FAQ</string>
	<string name="about_faq_q1">Is this app fully free of charge?</string>
	<string name="about_faq_a1">Yes! If you would like to support us search for the
		dontaion app which will be soon in the Android Market!</string>
	<string name="about_title_app">App license</string>
	<string name="about_body_app">menéame for Android is made by Moritz Wundke
		(www.DarkCultureGames.com) and pakore. Licensed under GNU General Public
		License (http://www.gnu.org/licenses/gpl.html)more info: http://code.google.com/p/meneameandroid/\nGraphics are
		made by Menéame Comunicacions, SL and licensed under Creative Commons
		(http://creativecommons.org/licenses/by-sa/2.5/)</string>
	<string name="about_title_meneame">Menéame license</string>
	<string name="about_body_meneame">meneame.net is made by Menéame Comunicacions, SL
	</string>

	<!-- Errors -->
	<string name="menealo_already_voted">You can only vote once!</string>
	<string name="menealo_failed">Failed to send vote!</string>
	<string name="clear_cache_failed">Failed to delete cache!</string>
	<string name="clear_cache_sdcard_notwritebale">SD-Card not writebale or not present!</string>
	<string name="error_unknown">Unkown Error</string>
	<string name="msg_obj_wrong_type_unknown">msg.obj is not a Feed object</string>
	<string name="msg_obj_null">msg.obj is null!</string>
	<string name="refreshing_failed">Failed to refresh feed:</string>
	<string name="refreshing_thread_still_alive">Worker thread still alive!</string>
	<string name="user_id_invalid">Invalid user ID! Please correct it in your
		preferences!</string>
	<string name="no_data_connection">No data conection!</string>

	<!-- Feed Errors -->
	<string name="feed_host_unavailable">No data conection!</string>
	<string name="feed_cache_file_not_found">Cache file not found!</string>
	<string name="feed_invalid_data">Feed contains errores!</string>
	<string name="feed_no_articles">Feed contains no articles!</string>

	<!-- Nótame erros messages -->
	<string name="notame_sending">Sending...</string>
	<string name="notame_ok">Nótame message has been send!</string>
	<string name="notame_failed">Failed to send nótame message!</string>

	<!--
		================================================================
		Preference
		================================================================
	-->

	<string name="app_pref_name">Preferences</string>

	<!-- Account Settings -->

	<string name="pref_account">Account</string>

	<string name="pref_account_apikey_summary">menéame API key (do not share, it\u0027s your
		personal key)</string>
	<string name="pref_account_apikey">API key</string>

	<string name="pref_account_user_id_summary">menéame user ID (can be found in your profile)
	</string>
	<string name="pref_account_user_id">User ID</string>

	<string name="pref_account_user_summary">menéame username</string>
	<string name="pref_account_user">Username</string>

	<!-- Style customizations -->

	<string name="pref_style">Style</string>

	<string name="pref_style_mainanimation">Animation</string>
	<string name="pref_style_mainanimation_summary">Animation used by the appliction</string>
	<string name="pref_style_mainanimation_none">None</string>
	<string name="pref_style_mainanimation_fadein">Fade-In</string>
	<string name="pref_style_mainanimation_slidein">Slide-In</string>
	
	<string name="pref_style_theme">Theme</string>
	<string name="pref_style_theme_summary">Application theme</string>
	<string name="pref_style_theme_default">Default</string>
	<string name="pref_style_theme_tiny">Tiny</string>

	<!-- Application settings -->

	<string name="pref_app">App</string>

	<string name="pref_app_version_number">TITLE</string>
	<string name="pref_app_version_number_summary">Application version</string>

	<string name="pref_app_stack_from_buttom">Inverse feed list</string>
	<string name="pref_app_stack_from_buttom_summary">First item will be the buttom of the list</string>

	<string name="pref_app_refreshonlaunch">Refresh on launch</string>
	<string name="pref_app_refreshonlaunch_summary">Refresh feeds when app launches?</string>

	<string name="pref_app_clearcache">Clear cache</string>
	<string name="pref_app_clearcache_summary">Will clear the cache of feeds</string>

	<string name="pref_app_maxarticles">Articles we will take from feed</string>
	<string name="pref_app_maxarticles_summary">Method used to store cached rss feeds</string>
	<string name="pref_app_maxarticles_10">10</string>
	<string name="pref_app_maxarticles_20">20</string>
	<string name="pref_app_maxarticles_40">40</string>
	<string name="pref_app_maxarticles_ALL">All</string>
	
	<string name="pref_app_onitemclick">On Click Action</string>
	<string name="pref_app_onitemclick_summary">What should be performed when clicking on an article</string>
	<string name="pref_app_onitemclick_default">Noting</string>
	<string name="pref_app_onitemclick_detailed">Detailed view</string>
	<string name="pref_app_onitemclick_open_meneame">Open (menéame)</string>
	<string name="pref_app_onitemclick_open_source">Open (source)</string>
	<string name="pref_app_onitemclick_vote">Vote</string>
	<string name="pref_app_onitemclick_share">Share</string>
</resources>
